@@ -4,6 +4,10 @@
 # BREAK = change breaks existing code
 # BUG	= fixed a bug that was (or could have been) crashing
 
+Aug 28, 2001
+	added circle and rect convenciences to pygame.draw
+	removed debug printing from draw.polygon
+
 Aug 25, 2001
 	added looping, scaling, and audio to for Movies
 
